--- a/app/views/instapost_lessons/lessons/lesson_1.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_1.html.erb
@@ -92,13 +92,18 @@ http://localhost:3000/
 </p>
 
 <div class="well">
+  <h3>I don't see a welcome page/I get an error</h3>
   <p>
     If you don’t see a welcome page or get an error, make sure you've navigated to your project folder. You can do this by running this command:
   </p>
 
 <pre><code class="bash">
-cd ~/desktop/instapost
+cd ~/desktop/instapost4
 </code></pre>
+
+  <p>
+    If this doesn't solve the problem, make sure that you have followed the instructions above step by step :)
+  </p>
 </div>
 
 <p>
