--- a/app/views/instapost_lessons/lessons/lesson_3.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_3.html.erb
@@ -1,46 +1,12 @@
 <h1><%= title_for(InstapostLesson, 2, 1) %></h1>
 
 <p>
-  Our app that we are going to develop together called Ideator is going to be an app where anyone can post ideas on to the website and they are automatically updated. It will also have the ability to show random ideas as well. In order to start making this website, we have to start visualizing what we want it to look like.
+  For this app, we could draw out wireframes, but since we're cloning Instagram, we don't really need to draw one out. However, in a real-life situation, we would start out with drawing mockups and specifying what everything should do.
 </p>
 
+
+<h3>Optional Assignment</h3>
 <p>
-  In every app, we want to create wireframes so we have guidance on how we want the app to look and how we want it to function. The simplest and best way in my opinion is to do it by hand.
+  If you have time, you can practice drawing mockups by creating mockups without looking at anything, and then compare it to the actual website. By doing this, you can see where you missed some functionality or where you miswrote a specification.
 </p>
-
-<p>
-  So here’s what I did for this app. I took out a piece of paper and just drew up some rough sketches for the app like this:
-</p>
-
-<%= image_tag 'ideator_wireframes.jpg', class: 'screenshot' %>
-
-<p>
-  As you can see, the wireframes don't have to be perfect, it just needs to get the job done! The key here is to visualize what features you want on your web application so that it's easier to think through how to build your web application.
-</p>
-
-<p>
-  Along with these mock ups, let's specify what kind of data we want to store in my database.
-</p>
-
-<p>
-  In our app, we want the <strong>ability to post ideas</strong>. To save those ideas into the app, <strong>we need to store the ideas in a database</strong>.
-</p>
-
-<p>
-  Let’s think about what pieces of information we want to store for this app. We want one piece of information which would be a <strong>description</strong> of what the idea is, and another which would be the <strong>author</strong> of the idea.
-</p>
-
-<p>
-  So each idea will have two pieces of information attached to it, a <code>description</code> and an <code>author</code>. 
-</p>
-
-<!-- <p>
-  Think of this as if you were to save information into an excel file. You would have columns in the excel file for each piece of information you want to store.
-</p> -->
-
-<p>
-  Drawing this out will become useful later on. Let’s just keep this in mind for now and move on.
-</p>
-
-
 
