--- a/app/views/instapost_lessons/lessons/lesson_5.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_5.html.erb
@@ -53,11 +53,19 @@ rails generate devise:install
 </code></pre>
 
 <p>
-  This will install all of the devise files and configurations.
+  This will install all of the devise files and configurations. Next, let's install the view files for devise. Run the following command:
 </p>  
 
+<pre><code class="bash">
+rails generate devise:views
+</code></pre>
+
 <p>
-  Awesome! You've successfully installed devise. As always, make sure to go through the standard git workflow.
+  This will generate all the files you need for registration, sign in, forgot your password, etc.
+</p>
+
+<p>
+  Awesome! Just like that, you've successfully installed devise. As always, make sure to go through the standard git workflow.
 </p>
 
 
