--- a/app/views/instapost_lessons/lessons/lesson_8.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_8.html.erb
@@ -9,5 +9,5 @@
 </p>
 
 <p>
-  <%= link_to 'this blog post', 'http://blog.thefirehoseproject.com/posts/switching-carrierwave-to-use-s3-with-heroku-and-localhost/' %> walks you through each of the steps in depth. Follow each of the steps and make sure you don't skip anything!
+  <%= link_to 'this blog post', 'http://blog.thefirehoseproject.com/posts/switching-carrierwave-to-use-s3-with-heroku-and-localhost/' %> walks you through each of the steps in depth. <strong>Follow each of the steps and make sure you don't skip anything!</strong>
 </p>
