--- a/app/views/static_pages/_mailchimp.html.erb
+++ b/app/views/static_pages/_mailchimp.html.erb
@@ -56,10 +56,11 @@
     <ul><li><input type="radio" value="Be hired as a developer" name="GOALS" id="mce-GOALS-0"><label for="mce-GOALS-0">Be hired as a developer</label></li>
 <li><input type="radio" value="Work as a freelance developer" name="GOALS" id="mce-GOALS-1"><label for="mce-GOALS-1">Work as a freelance developer</label></li>
 <li><input type="radio" value="Start my own business" name="GOALS" id="mce-GOALS-2"><label for="mce-GOALS-2">Start my own business</label></li>
+<li><input type="radio" value="Be hired as a developer at a company in Nepal" name="GOALS" id="mce-GOALS-3"><label for="mce-GOALS-3">Be hired as a developer at a company in Nepal</label></li>
 </ul>
 </div>
 <div class="mc-field-group input-group">
-    <strong>How much would you pay for the coding bootcamp? <span class="asterisk">*</span>
+    <strong>How much would you pay for the 3 month coding bootcamp? <span class="asterisk">*</span>
 </strong><small>(This is only for future reference, you won't have to pay anything :D )</small>
     <ul><li><input type="radio" value="10,000 Nepali Rupees" name="MAX_P" id="mce-MAX_P-0"><label for="mce-MAX_P-0">10,000 Nepali Rupees</label></li>
 <li><input type="radio" value="20,000 Nepali Rupees" name="MAX_P" id="mce-MAX_P-1"><label for="mce-MAX_P-1">20,000 Nepali Rupees</label></li>
